[gd_scene load_steps=7 format=2]

[ext_resource path="res://snakebackground.png" type="Texture" id=1]
[ext_resource path="res://SnakePopupScene.gd" type="Script" id=2]
[ext_resource path="res://addons/github-integration/fonts/W95FA.otf" type="DynamicFontData" id=3]
[ext_resource path="res://apple.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ -74.0 ]
}

[node name="SnakePopupTest" type="WindowDialog" parent="."]
visible = true
margin_right = 500.0
margin_bottom = 355.0
popup_exclusive = true

[node name="Sprite" type="Sprite" parent="SnakePopupTest"]
position = Vector2( 250, 177 )
texture = ExtResource( 1 )

[node name="SnakeBox" type="VBoxContainer" parent="SnakePopupTest/Sprite"]
margin_left = -249.0
margin_top = -140.0
margin_right = 251.0
margin_bottom = 177.0

[node name="Food" type="Sprite" parent="SnakePopupTest/Sprite/SnakeBox"]
position = Vector2( -1.00002, -37 )
texture = ExtResource( 4 )

[node name="ScorePanel" type="Panel" parent="SnakePopupTest"]
anchor_right = 1.0
margin_left = -1.0
margin_right = 1.0
margin_bottom = 38.0
custom_styles/panel = SubResource( 1 )

[node name="ScoreLabel" type="Label" parent="SnakePopupTest"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = -1.0
margin_right = 251.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Score: 0"
align = 1
valign = 1

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
